fixed profile image and bio collapsing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,8 @@ This is the class for the DotLoader.
   }
   .left,
   .right {
-    width: auto;
-    text-align: center;
+    width: auto!important;
+    text-align: center!important;
   }
 }
 
